package org.calamarfederal.messyink.feature_counter.presentation.counter_history

/**
 * Identifying tags for testing
 */
object CounterHistoryTestTags {
    /**
     * Line graph showing the Tick history
     */
    const val TickGraph = "tick-graph"

    /**
     * Text button representing Lower Bound
     */
    const val TickGraphDomainLower = "tick-graph-domain-lower"

    /**
     * Text button representing Upper Bound
     */
    const val TickGraphDomainUpper = "tick-graph-domain-upper"

    /**
     * Domain dates picker
     */
    const val DomainDatePicker = "domain-date-picker"

    /**
     * Domain date picker button which fits to data
     */
    const val DomainFitToData = "domain-date-fit-to-data"

    /**
     * Domain date picker Save button
     */
    const val DomainPickerSave = "domain-date-picker-save"

    /**
     * Scrollable lazy column of tick log entries
     */
    const val TickLogScrollable = "tick-log-container"

    /**
     * Details of a tick in Tick Log view
     */
    const val TickLogEntry = "tick-log-entry"

    /**
     * Popup showing options on a Tick Log Entry
     */
    const val TickLogOptions = "tick-log-entry-options"

    /**
     * Popup option to Edit Tick
     */
    const val TickLogEntryEdit = "tick-log-entry-edit"

    /**
     * Popup option to Delete Tick
     */
    const val TickLogEntryDelete = "tick-log-entry-delete"
}
