<resources>
    <string name="app_name">Messy Ink</string>
    <!--  GENERAL  -->

    <!--  Button label to navigate to CounterHistory  -->
    <string name="counter_history_nav_label">History</string>
    <!--  Button label to navigate to GameCounter  -->
    <string name="counter_game_nav_label">Game Mode</string>
    <!--  Button label to navigate to Edit Counter  -->
    <string name="counter_edit_nav_label">Edit Counter</string>
    <!--  Button label to navigate to Create Counter  -->
    <string name="counter_create_nav_label">Create Counter</string>

    <string name="unknown_error">Unknown error</string>

    <!--  Content description for any navigate up button  -->
    <string name="navigate_up">Navigate up</string>
    <!--  Content description for any close button -->
    <string name="close">Close</string>
    <!--  Content description for any cancel button -->
    <string name="cancel">Cancel</string>
    <!--  Save button label -->
    <string name="save">Save</string>
    <!--  Content description for Sort Icon button  -->
    <string name="sort_icon_button_content_description">Sort</string>

    <!--  Counter Hisotry Screen  -->
    <string name="time_modified_labeled">Modified: %1$s</string>
    <string name="time_modified">Time Modified</string>
    <string name="time_created_labeled">Created: %1$s</string>
    <string name="time_created">Time Created</string>
    <string name="time_for_data_labeled">Data: %1$s</string>
    <string name="time_for_data">Time For Data</string>

    <!--  Button label on tick options after long pressing; navigates to edit tick  -->
    <string name="edit_tick_label">Edit</string>
    <!--  Button label on tick options after long pressing; deletes tick -->
    <string name="delete_tick_label">Delete</string>

    <!--  Fit to data button label in DomainPicker  -->
    <string name="fit_to_data">Fit to data</string>

    <!--  Label for Navigation Icon leading to Tick Graph  -->
    <string name="tick_graph">Tick Graph</string>
    <!--  Graph content description in TickGraph  -->
    <string name="tick_graph_description">Line graph showing Tick amount over time</string>
    <!--  Title of the tick graph  -->
    <string name="tick_graph_title">Amount v. %1$s</string>
    <!--  Label for Navigation Icon leading to Tick Log  -->
    <string name="tick_log">Tick Log</string>

    <!--  Counter Overview Screen  -->

    <string name="counter_overview_title">Counters</string>
    <!--  Button to quickly increase in Counter Overview  -->
    <string name="counter_increase_description">Increment counter</string>
    <!--  Button to quickly decrease in Counter Overview  -->
    <string name="counter_decrease_description">Decrement counter</string>
    <!--  Counter Option to Clear All  -->
    <string name="counter_clear_all">Clear all ticks</string>
    <!--  Counter Option to delete the counter-->
    <string name="counter_delete">Delete counter</string>

    <!--  Create / Edit Counter Screen  -->

    <!--  Counter Title input label  -->
    <string name="counter_title_input_label">Title</string>

    <!--  Error / Feedback  -->
    <string name="counter_name_help_blank">Please enter a name with non-whitespace characters</string>

    <!--  Edit Tick Screen  -->
    <!--  Title in app bar  -->
    <string name="tick_edit_title">Edit Tick</string>
    <!--  Amount input label  -->
    <string name="tick_amount_input_label">Amount</string>
    <!--  Date error feedback  -->
    <string name="tick_help_invalid_date">Invalid date</string>
    <!--  Help text when entered tick amount is only whitespace  -->
    <string name="tick_amount_help_blank">Please enter a number</string>
    <!--  Help text when entered tick amount is not a number  -->
    <string name="tick_amount_help_non_number">Please enter a decimal number</string>

</resources>
